--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
+
+services: mongodb
+
 jdk:
   - oraclejdk8
 
-
+script:
+  - mvn -e -DTRAVIS_JOB_ID=$TRAVIS_JOB_ID clean install
 
